# APITest

./: .env.example  .gitignore  LICENSE  README.md
go-api/: go.mod  go.sum  main.go
go-api/controllers/: auth_controller.go  user_controller.go
go-api/middlewares/: jwt_auth.go
go-api/models/: jwt.go  user_model.go
go-api/pkg/: database.go  jwt.go
go-api/services/: user_service.go
rust-api/: Cargo.toml  README.md
rust-api/src/: controllers.rs  database.rs  errors.rs  main.rs  models.rs  router.rs  services.rs
rust-api/src/controllers/: auth_controller.rs  user_controller.rs
rust-api/src/middlewares/: jwt_auth.rs
rust-api/src/models/: jwt.rs  user_model.rs
rust-api/src/services/: password_service.rs  user_service.rs
