[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11.3"
dotenv = "0.15.0"
mongodb = "2.7.1"
chrono = { version = "0.4.31", features = ["serde"] }
axum = "0.7.1"
tokio = { version = "1.33.0", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
argon2 = "0.5.2"